Cycles Rendering with AMD OpenCL Diver ver(14.9WHQL) works in 2.71 not in 2.72 #42081

Closed
opened 2014-10-05 06:27:13 +02:00 by Jeffrey Engelstad · 12 comments

System Information
Windows 8.1, AMD FX8350 , AMD HD 7970GPU
AMD Driver 14.9 WHQL

Blender Version
Broken: (2.72)
Worked: (2.71)

Short description of error
BMW test render works on gpu in 2.71 but not in 2.72 without editing (kernel_compat_opencl.h)
BMW1M-MikePan.blend
Exact steps for others to reproduce the error
Blender 2.71 hit F12 = Renders
Blender 2.72
edit these lines to match in kernel_compat_opencl.h

#ifdef KERNEL_OPENCL_AMD#define CL_NO_FLOAT3
#endif#ifdef CL_NO_FLOAT3
#define float3 float4#endif

run blender 2.72 and hit F12 = Renders
note: compile time is down to 17sec and ram peeks at 954MB.

**System Information** Windows 8.1, AMD FX8350 , AMD HD 7970GPU AMD Driver 14.9 WHQL **Blender Version** Broken: (2.72) Worked: (2.71) **Short description of error** BMW test render works on gpu in 2.71 but not in 2.72 without editing (kernel_compat_opencl.h) [BMW1M-MikePan.blend](https://archive.blender.org/developer/F115026/BMW1M-MikePan.blend) **Exact steps for others to reproduce the error** Blender 2.71 hit F12 = Renders Blender 2.72 edit these lines to match in kernel_compat_opencl.h *#ifdef __KERNEL_OPENCL_AMD__*#define __CL_NO_FLOAT3__ *#endif*#ifdef __CL_NO_FLOAT3__ *#define float3 float4*#endif run blender 2.72 and hit F12 = Renders note: compile time is down to 17sec and ram peeks at 954MB.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @JeffreyEngelstad

Added subscriber: @JeffreyEngelstad

I should have stated to pick Opencl as rendering device and GPU before rendering.

I should have stated to pick Opencl as rendering device and GPU before rendering.

I am just adding this as it does not look correct in the description above.
#ifdef KERNEL_OPENCL_AMD#define CL_NO_FLOAT3
#endif#ifdef CL_NO_FLOAT3
#define float3 float4#endif

I am just adding this as it does not look correct in the description above. *#ifdef __KERNEL_OPENCL_AMD__*#define __CL_NO_FLOAT3__ *#endif*#ifdef __CL_NO_FLOAT3__ *#define float3 float4*#endif
Thomas Dinges was assigned by Bastien Montagne 2014-10-05 09:25:41 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Thomas, I know you love OpenCL… :P

Thomas, I know you love OpenCL… :P

What is the error message, without commenting these lines?

What is the error message, without commenting these lines?

I don't get one from blender.
it compiles and try's to render, but at about 1/3 it locks up and windows gives me a display Driver stopped responding and has recovered, but blender locks up and all you can do is shut it down inside Task Manager.

But if I comment the Lines out Cycles compiles and renders all the way through, and does not lock up.

I don't get one from blender. it compiles and try's to render, but at about 1/3 it locks up and windows gives me a display Driver stopped responding and has recovered, but blender locks up and all you can do is shut it down inside Task Manager. But if I comment the Lines out Cycles compiles and renders all the way through, and does not lock up.

This issue was referenced by a1b27d6424

This issue was referenced by a1b27d6424601238df3bc0149a4742a7089e7e96

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a1b27d6424.

Closed by commit a1b27d6424.

This issue was referenced by 621f3e0571

This issue was referenced by 621f3e05714f101b64d538eb13daca6660d83d81
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42081
No description provided.