Fix T42081, OpenCL supports float3 since the 1.1 specification, not sure why we needed this.